--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://username.github.io" # the base hostname & protocol for your site
 timezone: America/New York
-theme: jekyll-theme-time-machine
+theme: hacker
